# serializer version: 1
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_asleep]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-09T00:53:21+00:00',
      'fetched_at': '2026-01-09T00:53:29.852000+00:00',
      'friendly_name': 'BYD Seal U Dm-i Asleep',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_asleep',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_battery_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BYD Seal U Dm-i Battery Heater Active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_battery_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_cabin_hvac_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'BYD Seal U Dm-i Cabin HVAC Active',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_cabin_hvac_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_charging_cable_plugged_in]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'BYD Seal U Dm-i Charging Cable Plugged In',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_charging_cable_plugged_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_digital_key_paired]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-09T00:53:21+00:00',
      'fetched_at': '2026-01-09T00:53:29.852000+00:00',
      'friendly_name': 'BYD Seal U Dm-i Digital Key Paired',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_digital_key_paired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Door Back Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_back_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'BYD Seal U Dm-i Door Back Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_back_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Door Back Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_back_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'BYD Seal U Dm-i Door Back Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_back_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Door Front Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_front_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'BYD Seal U Dm-i Door Front Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_front_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Door Front Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_door_front_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'BYD Seal U Dm-i Door Front Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_door_front_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_engine_cover]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Engine Cover',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_engine_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_fast_charger_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'BYD Seal U Dm-i Fast Charger Connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_fast_charger_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_front_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'BYD Seal U Dm-i Front Defroster Active',
      'icon': 'mdi:car-defrost-front',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_front_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_front_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Front Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_front_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_front_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'BYD Seal U Dm-i Front Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_front_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_online]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-09T00:53:21+00:00',
      'fetched_at': '2026-01-09T00:53:29.852000+00:00',
      'friendly_name': 'BYD Seal U Dm-i Online',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_rear_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'BYD Seal U Dm-i Rear Defroster Active',
      'icon': 'mdi:car-defrost-rear',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_rear_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_rear_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Rear Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_rear_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_rear_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'BYD Seal U Dm-i Rear Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_rear_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_steering_wheel_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'BYD Seal U Dm-i Steering Wheel Heater Active',
      'icon': 'mdi:steering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_steering_wheel_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_sunroof]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'BYD Seal U Dm-i Sunroof',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_sunroof',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_surveillance_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'BYD Seal U Dm-i Surveillance Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_surveillance_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_window_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'BYD Seal U Dm-i Window Back Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_window_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_window_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'BYD Seal U Dm-i Window Back Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_window_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_window_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'BYD Seal U Dm-i Window Front Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_window_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-byd_seal-binary_sensor][binary_sensor.byd_seal_u_dm_i_window_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'BYD Seal U Dm-i Window Front Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.byd_seal_u_dm_i_window_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_asleep]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JAGUAR I-PACE Asleep',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_asleep',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_battery_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JAGUAR I-PACE Battery Heater Active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_battery_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_cabin_hvac_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'JAGUAR I-PACE Cabin HVAC Active',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_cabin_hvac_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_charging_cable_plugged_in]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'plug',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Charging Cable Plugged In',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_charging_cable_plugged_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_digital_key_paired]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JAGUAR I-PACE Digital Key Paired',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_digital_key_paired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Back Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_back_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'lock',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Back Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_back_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Back Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_back_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'lock',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Back Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_back_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Front Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_front_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'lock',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Front Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_front_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Front Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_door_front_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'lock',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Door Front Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_door_front_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_engine_cover]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Engine Cover',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_engine_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_fast_charger_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'JAGUAR I-PACE Fast Charger Connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_fast_charger_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_front_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'JAGUAR I-PACE Front Defroster Active',
      'icon': 'mdi:car-defrost-front',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_front_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_front_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Front Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_front_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_front_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'lock',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Front Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_front_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_online]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JAGUAR I-PACE Online',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_rear_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'JAGUAR I-PACE Rear Defroster Active',
      'icon': 'mdi:car-defrost-rear',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_rear_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_rear_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'door',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Rear Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_rear_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_rear_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'lock',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Rear Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_rear_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_steering_wheel_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'JAGUAR I-PACE Steering Wheel Heater Active',
      'icon': 'mdi:steering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_steering_wheel_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_sunroof]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'JAGUAR I-PACE Sunroof',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_sunroof',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_surveillance_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'JAGUAR I-PACE Surveillance Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_surveillance_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_window_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'window',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Window Back Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_window_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_window_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'window',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Window Back Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_window_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_window_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'window',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Window Front Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_window_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-jaguar_ipace-binary_sensor][binary_sensor.jaguar_i_pace_window_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T01:34:15+00:00',
      'device_class': 'window',
      'fetched_at': '2025-12-08T01:34:24.453000+00:00',
      'friendly_name': 'JAGUAR I-PACE Window Front Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.jaguar_i_pace_window_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_asleep]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-02-01T09:03:40+00:00',
      'fetched_at': '2026-02-01T09:25:42.645000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Asleep',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_asleep',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_battery_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'POLESTAR Polestar 2 Battery Heater Active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_battery_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_cabin_hvac_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'POLESTAR Polestar 2 Cabin HVAC Active',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_cabin_hvac_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_charging_cable_plugged_in]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-02-01T09:25:33+00:00',
      'device_class': 'plug',
      'fetched_at': '2026-02-01T09:25:43.244000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Charging Cable Plugged In',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_charging_cable_plugged_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_digital_key_paired]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'POLESTAR Polestar 2 Digital Key Paired',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_digital_key_paired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'door',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Back Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_back_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'lock',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Back Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_back_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'door',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Back Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_back_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'lock',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Back Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_back_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'door',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Front Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_front_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'lock',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Front Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_front_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'door',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Front Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_door_front_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'lock',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Door Front Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_door_front_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_engine_cover]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'POLESTAR Polestar 2 Engine Cover',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_engine_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_fast_charger_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-02-01T09:25:33+00:00',
      'device_class': 'plug',
      'fetched_at': '2026-02-01T09:25:43.244000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Fast Charger Connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_fast_charger_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_front_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'POLESTAR Polestar 2 Front Defroster Active',
      'icon': 'mdi:car-defrost-front',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_front_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_front_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'door',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Front Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_front_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_front_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'POLESTAR Polestar 2 Front Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_front_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_online]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-02-01T09:03:40+00:00',
      'fetched_at': '2026-02-01T09:25:42.645000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Online',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_rear_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'POLESTAR Polestar 2 Rear Defroster Active',
      'icon': 'mdi:car-defrost-rear',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_rear_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_rear_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'door',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Rear Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_rear_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_rear_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'lock',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Rear Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_rear_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_steering_wheel_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'POLESTAR Polestar 2 Steering Wheel Heater Active',
      'icon': 'mdi:steering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_steering_wheel_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_sunroof]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'POLESTAR Polestar 2 Sunroof',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_sunroof',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_surveillance_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'POLESTAR Polestar 2 Surveillance Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_surveillance_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_window_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'window',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Window Back Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_window_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_window_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'window',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Window Back Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_window_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_window_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'window',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Window Front Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_window_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-polestar_2-binary_sensor][binary_sensor.polestar_polestar_2_window_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2026-01-31T22:09:52+00:00',
      'device_class': 'window',
      'fetched_at': '2026-02-01T09:25:42.652000+00:00',
      'friendly_name': 'POLESTAR Polestar 2 Window Front Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.polestar_polestar_2_window_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_asleep]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Asleep',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_asleep',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_battery_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Battery Heater Active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_battery_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_cabin_hvac_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'VW ID.4 Cabin HVAC Active',
      'icon': 'mdi:air-conditioner',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_cabin_hvac_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_charging_cable_plugged_in]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'VW ID.4 Charging Cable Plugged In',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_charging_cable_plugged_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_digital_key_paired]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Digital Key Paired',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_digital_key_paired',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Door Back Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_back_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'VW ID.4 Door Back Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_back_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Door Back Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_back_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'VW ID.4 Door Back Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_back_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Door Front Left',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_front_left_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'VW ID.4 Door Front Left Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_front_left_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Door Front Right',
      'icon': 'mdi:car-door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_door_front_right_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'VW ID.4 Door Front Right Lock',
      'icon': 'mdi:car-door-lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_door_front_right_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_engine_cover]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Engine Cover',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_engine_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_fast_charger_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'VW ID.4 Fast Charger Connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_fast_charger_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_front_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'VW ID.4 Front Defroster Active',
      'icon': 'mdi:car-defrost-front',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_front_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_front_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Front Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_front_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_front_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'VW ID.4 Front Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_front_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_online]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Online',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_rear_defroster_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'VW ID.4 Rear Defroster Active',
      'icon': 'mdi:car-defrost-rear',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_rear_defroster_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_rear_trunk]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Rear Trunk',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_rear_trunk',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_rear_trunk_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'lock',
      'friendly_name': 'VW ID.4 Rear Trunk Lock',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_rear_trunk_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_steering_wheel_heater_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'VW ID.4 Steering Wheel Heater Active',
      'icon': 'mdi:steering',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_steering_wheel_heater_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_sunroof]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'VW ID.4 Sunroof',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_sunroof',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_surveillance_enabled]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Surveillance Enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_surveillance_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_window_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'VW ID.4 Window Back Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_window_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_window_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'VW ID.4 Window Back Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_window_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_window_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'VW ID.4 Window Front Left',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_window_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state_all-vw_id_4-binary_sensor][binary_sensor.vw_id_4_window_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'VW ID.4 Window Front Right',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_window_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
